--- a/client/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/client/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -29,8 +29,7 @@
     .NavigationItem a {
         color: white;
         height: 100%;
-        padding: 16px 10px;
-        border-bottom: 4px solid transparent;
+        padding: 10px;
     }
     
 }
