--- a/client/src/components/Navigation/SideDrawer/DrawerToggle/DrawerToggle.css
+++ b/client/src/components/Navigation/SideDrawer/DrawerToggle/DrawerToggle.css
@@ -1,6 +1,6 @@
 .DrawerToggle {
     width: 40px;
-    height: 100%;
+    height: 50px;
     display: flex;
     flex-flow: column;
     justify-content: space-around;
@@ -16,7 +16,7 @@
     background-color: white;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 992px) {
     .DrawerToggle {
         display: none;
     }
