--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: black;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,11 +28,17 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: white;
+  color: black;
+}
+
+h3 {
+  font-size: 24px;
+  line-height: 36px;
+  letter-spacing: 2px;
 }
 
 p{
-  color: white;
+  color: black;
 }
 
 button {
@@ -52,4 +58,17 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+
+@media (min-width: 992px) {
+   .mobileOnly{
+     display: none;
+   } 
+}
+
+@media (max-width: 992px) {
+  .desktopOnly{
+    display: none;
+  }
 }
