--- a/client/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/client/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -6,7 +6,7 @@
 }
 
 .NavigationItem a {
-    color: white;
+    color: black;
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
@@ -17,7 +17,7 @@
     opacity: .8;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 992px) {
     .NavigationItem {
         margin: 0;
         display: flex;
