--- a/client/src/pages/Product/SingleProduct/SingleProduct.css
+++ b/client/src/pages/Product/SingleProduct/SingleProduct.css
@@ -77,6 +77,12 @@
     border-radius: 0;
 }
 
+.quantity-btn button{
+   background-color: transparent;
+   border: 0;  
+   padding: 0;
+}
+
 
 @media (max-width: 606px) {
     .quantity{
