--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -20,3 +20,18 @@
 .hero-intro h4, .hero-intro h1{
     color: white;
 }
+
+
+@media (max-width: 550px) {
+    .hero-intro{
+        padding: 0 4%;
+    }
+
+    .hero-intro h1{
+        line-height: 1.5;
+    }
+
+    .hero-intro h4{
+        font-size: 14px;
+    }
+}
